2010-01-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Included A2STR.h
	* src/CookieStorage.cc

2010-01-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten Cookie storage.
	* src/Cookie.cc
	* src/Cookie.h
	* src/CookieParser.cc
	* src/CookieStorage.cc
	* src/CookieStorage.h
	* src/a2functional.h
	* test/CookieParserTest.cc
	* test/CookieStorageTest.cc
	* test/CookieTest.cc
	* test/HttpResponseTest.cc
	* test/TestUtil.h
	* test/a2functionalTest.cc

2010-01-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Handle redirected URI which is not properly percent encoded.
	* src/Request.cc
	* test/RequestTest.cc

2010-01-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that causes segmentaiton fault when aria2 sees '404
	not found' in the N times(N is where --max-file-not-found=N, N>0)
	in a row without single '200 OK' response.
	* src/RequestGroup.cc.

2010-01-24  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error with i586-mingw32msvc-g++.  Always Cut console
	readout by 80 characters in mingw32 build.  Catch exception in
	DHTMessageReceiver::receiveMessage().
	* src/AbstractDiskWriter.cc
	* src/ConsoleStatCalc.cc
	* src/DHTMessageReceiver.cc
	* src/File.cc
	* src/RequestGroupMan.cc
	* src/a2io.h
	* test/FileTest.cc

2010-01-24  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error with intel compiler
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h

2010-01-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release 1.8.1

2010-01-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Swedish, Russian and Italian translations. Thanks to all
	translators.
	* po/it.po
	* po/ru.po
	* po/sv.po

2010-01-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed broken OptionParser::findByName().
	* src/OptionParser.cc
	* test/OptionParserTest.cc

2010-01-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
