@@ -222,7 +222,7 @@ std::string toUpper(const std::string& src);
 
 std::string toLower(const std::string& src);
 
-bool isNumbersAndDotsNotation(const std::string& name);
+bool isNumericHost(const std::string& name);
 
 void setGlobalSignalHandler(int signal, void (*handler)(int), int flags);
 
