@@ -1,5 +1,16 @@
 2010-01-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Replaced isNumberAndDotsNotation() with isNumericHost().
+	isNumericHost() can handle IPv6 address.
+	* src/Cookie.cc
+	* src/CookieStorage.cc
+	* src/util.cc
+	* src/util.h
+	* test/CookieTest.cc
+	* test/UtilTest.cc
+
+2010-01-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Included A2STR.h
 	* src/CookieStorage.cc
 
